Class#newInstance will be deprecated with Java 9